[package]
name = "pug"
version = "0.1.0"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
description = "A web framework for rust."
homepage = "https://github.com/saturn-xiv/put"
license = "MIT"

[features]
default = ["postgresql", "mysql", "sqlite", "redis", "rabbitmq", "sodium", "zeromq"]

postgresql = ["rocket_contrib/diesel_postgres_pool"]
mysql = ["rocket_contrib/diesel_mysql_pool"]
sqlite = ["rocket_contrib/diesel_sqlite_pool", "diesel/chrono"]
redis = ["rocket_contrib/redis_pool"]
rabbitmq = []
zeromq = ["zmq"]
sodium = ["sodiumoxide"]

[dependencies]
log = "0.4"
env_logger = "0.5"
log4rs = "0.8"
error-chain = "0.12"
lazy_static = "1.2"
chrono-tz = "0.5"
serde = "1"
serde_derive = "1"
jsonwebtoken = "5"
serde_json = "1"
clap = "2.32"
base64 = "0.10"
sha2 = "0.8"
toml = "0.4"
validator = "0.8"
validator_derive = "0.8"
serde-xml-rs = "0.2"
xml-rs = "0.8"
encoding_rs = "0.8"
rand = "0.5"
regex = "1"
libc = "0.2"
oping = "0.3"
reqwest = "0.9"
rocket = "0.4.0-rc.1"

[dependencies.openssl-sys]
version = "*"
features = ["vendored"]

[dependencies.zmq]
version = "0.8"
optional = true

# from https://github.com/SergioBenitez/Rocket/blob/v0.4/core/http/Cargo.toml
[dependencies.hyper]
version = "0.10.13"
default-features = false

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.url]
version = "1.7"
features=["query_encoding"]

[dependencies.sodiumoxide]
version = "0.1.0"
optional = true

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
default-features = false
features = ["tera_templates"]

[dependencies.diesel]
version = "1.3"
features = ["chrono", "serde_json", "uuid", "network-address", "numeric", "r2d2"]
