[package]
name = "pug"
version = "0.1.0"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
description = "A web framework for rust."
homepage = "https://github.com/saturn-xiv/pug"
license = "MIT"

[features]
default = ["postgresql", "redis", "rabbitmq", "sodium", "zeromq"]

postgresql = ["diesel/postgres", "rocket_contrib/diesel_postgres_pool"]
mysql = ["diesel/mysql", "rocket_contrib/diesel_mysql_pool"]
sqlite = ["diesel/sqlite", "libsqlite3-sys", "rocket_contrib/diesel_sqlite_pool"]
rabbitmq = []
zeromq = ["zmq"]
sodium = ["rust_sodium"]
redis = ["r2d2_redis", "rocket_contrib/redis_pool"]

[dependencies]
r2d2 = "0.8"
log = "0.4"
env_logger = "0.5"
log4rs = "0.8"
error-chain = "0.12"
lazy_static = "1.0"
chrono-tz = "0.5"
serde = "1"
serde_derive = "1"
jsonwebtoken = "5"
serde_json = "1"
clap = "2.32"
base64 = "0.10"
sha2 = "0.8"
rand = "0.6"
ring = "0.13"
toml = "0.4"
validator = "0.8"
validator_derive = "0.8"
serde-xml-rs = "0.2"
xml-rs = "0.8"
encoding_rs = "0.8"
regex = "1"
libc = "0.2"
oping = "0.3"
reqwest = "0.9"
hyper = "0.12"
futures = "0.1"
tokio = "0.1"
tokio-io = "0.1"
tokio-codec = "0.1"
mime = "0.3"
language-tags = "0.2"
cookie = "0.11"
rocket = "0.4.0-rc.2"
mustache = "*"

[dependencies.r2d2_redis]
version = "0.8"
optional=true

[dependencies.openssl-sys]
version = "*"
features = ["vendored"]

[dependencies.zmq]
version = "0.8"
optional = true

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.url]
version = "1.7"
features=["query_encoding"]

[dependencies.rust_sodium]
version = "0.10"
optional = true

[dependencies.diesel]
version = "1.3"
features = ["chrono", "serde_json", "uuid", "network-address", "numeric", "r2d2", "128-column-tables"]

[dependencies.libsqlite3-sys]
version = "*"
optional = true
features = ["bundled"]

[dependencies.rocket_contrib]
version = "0.4.0-rc.2"
default-features = false
features = ["tera_templates", "json", "serve", "uuid"]
