[package]
name = "pug"
version = "0.1.0"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
description = "A web framework for rust."
homepage = "https://github.com/saturn-xiv/pug"
license = "MIT"

[features]
default = ["postgresql"]

postgresql = ["diesel/postgres", "rocket_contrib/diesel_postgres_pool"]
mysql = ["diesel/mysql", "rocket_contrib/diesel_mysql_pool"]
sqlite = ["diesel/sqlite", "libsqlite3-sys", "rocket_contrib/diesel_sqlite_pool"]

[dependencies]
r2d2 = "0.8"
log = "0.4"
log4rs = "0.8"
env_logger = "0.6"
error-chain = "0.12"
lazy_static = "1.0"
serde = "1"
serde_derive = "1"
jsonwebtoken = "5"
serde_json = "1"
clap = "2.32"
base64 = "0.10"
rand = "0.6"
ring = "0.13"
toml = "0.4"
validator = "0.8"
validator_derive = "0.8"
serde-xml-rs = "0.2"
xml-rs = "0.8"
encoding_rs = "0.8"
regex = "1"
oping = "0.3"
reqwest = "0.9"
futures = "0.1"
tokio = "0.1"
tokio-io = "0.1"
tokio-codec = "0.1"
failure = "0.1"
language-tags = "0.2"
hyper = "0.10"
rocket = "0.4"
r2d2_redis = "0.8"
zmq = "0.9"
lapin-futures = "0.15"
nix = "0.12"
eui48 = "0.4"
rust_sodium = "0.10"
hex = "0.3"
md5 = "0.6"
git2 = "0.7"
ssh2 = "0.3"
mustache = "*"

[dependencies.openssl-sys]
version = "*"
features = ["vendored"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.chrono-tz]
version = "0.5"
features = ["serde"]

[dependencies.url]
version = "1.7"
features=["query_encoding"]

[dependencies.uuid]
version = "0.7"
features = ["v4"]

[dependencies.diesel]
version = "1.3"
features = ["chrono", "serde_json", "uuid", "network-address", "numeric", "r2d2", "128-column-tables"]

[dependencies.libsqlite3-sys]
version = "*"
optional = true
features = ["bundled"]

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["tera_templates", "handlebars_templates", "json", "serve", "uuid", "redis_pool"]
